--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -15,8 +15,8 @@ bind-key C-a    send-prefix
 
 # All kind of nice options
 set-option -g   bell-action any
-set-option -g   default-terminal screen-256color
-set-option -g   history-limit 100000
+set-option -g   default-terminal screen-256color  # Adjust term to use 256 colors.
+set-option -g   history-limit 100000  # Use a BIG scrollback history buffer.
 set-option -g   mouse-select-pane on
 set-option -g   mouse-select-window on
 set-option -g   mouse-resize-pane on
@@ -25,7 +25,7 @@ set-option -g   visual-activity off
 set-option -g   visual-bell on
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
-set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'
+set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
 set-option -g   base-index 1
 set-option -g   default-path ""
 
@@ -46,7 +46,8 @@ set-option -g   status-left ' #h |'
 set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
 
 
-# COLORS ----------------------------------------------------------------------
+################################################################################
+# COLORS 
 
 # default statusbar colors
 set-option -g   status-fg white
@@ -91,8 +92,8 @@ set-window-option -g aggressive-resize off
 set-window-option -g window-status-format ' #I-#W '
 set-window-option -g window-status-current-format ' #I-#W '
 
-
-# KEY BINDINGS ----------------------------------------------------------------
+################################################################################
+# KEY BINDINGS
 
 # Remap keys to my settings
 unbind-key M-d      ; bind-key -n M-d   detach-client
@@ -100,9 +101,11 @@ unbind-key d        ; bind-key d        detach-client
 
 unbind-key M-c      ; bind-key -n M-c   command-prompt -p "tmux:"
 unbind-key M-m      ; bind-key -n M-m   command-prompt -p "Man:" "split-window 'man %%'"
+unbind-key M-e      ; bind-key -n M-e   choose-session
+
+# Window selection
 unbind-key Tab      ; bind-key Tab      choose-window
 unbind-key M-w      ; bind-key -n M-w   choose-window
-unbind-key M-e      ; bind-key -n M-e   choose-session
 unbind-key M-t      ; bind-key -n M-t   new-window
 unbind-key t        ; bind-key t        new-window
 unbind-key M-`      ; bind-key -n M-`   last-window
@@ -110,10 +113,6 @@ unbind-key n        ; bind-key n        next-window
 unbind-key p        ; bind-key p        previous-window
 unbind-key M-n      ; bind-key -n M-n   next-window
 unbind-key M-p      ; bind-key -n M-p   previous-window
-unbind-key M-right  ; bind-key -n M-right   next-window
-unbind-key M-left   ; bind-key -n M-left    previous-window
-
-# Window selection
 unbind-key 1        ; bind-key 1        select-window -t 1
 unbind-key 2        ; bind-key 2        select-window -t 2
 unbind-key 3        ; bind-key 3        select-window -t 3
@@ -157,13 +156,18 @@ unbind-key h        ; bind-key -r h     resize-pane -L 5
 unbind-key l        ; bind-key -r l     resize-pane -R 5
 unbind-key C-left   ; bind-key -r C-left    resize-pane -L 1
 unbind-key C-right  ; bind-key -r C-right   resize-pane -R 1
-unbind-key C-up     ; bind-key -r C-up  resize-pane -U 1
+unbind-key C-up     ; bind-key -r C-up      resize-pane -U 1
 unbind-key C-down   ; bind-key -r C-down    resize-pane -D 1
+unbind-key M-left   ; bind-key -n M-left    resize-pane -L 5
+unbind-key M-right  ; bind-key -n M-right   resize-pane -R 5
+unbind-key C-up     ; bind-key -r M-up      resize-pane -U 5
+unbind-key C-down   ; bind-key -r M-down    resize-pane -D 5
 
 unbind-key @        ; bind-key @        confirm-before kill-window
+# R = reload configuration file
 unbind-key R        ; bind-key R	source-file ~/.tmux.conf
+# q = list keys
 unbind-key q        ; bind-key q        list-keys
-unbind-key M-q      ; bind-key -n M-q   list-keys
 
 # Copy mode
 set-window-option -g mode-keys vi
@@ -179,7 +183,8 @@ unbind-key -t vi-copy Home  ; bind-key -t vi-copy Home  start-of-line
 unbind-key -t vi-copy End   ; bind-key -t vi-copy End   end-of-line
 unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 
-# move x clipboard into tmux paste buffer
+# Depends on xclip (typically seperate package).
+# Move x clipboard into tmux paste buffer.
 unbind-key C-v       ; bind C-v         run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-# move tmux copy buffer into x clipboard
+# Move tmux copy buffer into x clipboard.
 unbind-key C-c       ; bind C-y         run "tmux show-buffer | xclip -i"
