Changed color scheme to a solarized one.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -50,35 +50,40 @@ set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
 # COLORS 
 
 # default statusbar colors
-set-option -g   status-fg white
-set-option -g   status-bg blue
-set-option -g   status-attr bright
+set-option -g   status-fg "#586e75"  # base01
+set-option -g   status-bg "#002b36"  # base03
+#set-option -g   status-attr bright
 set-option -g   status-keys emacs
 
 # default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg blue
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-fg "#839496"  # base0
+set-window-option -g window-status-bg "#002b36"  # base03
+#set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg yellow
-set-window-option -g window-status-current-bg red
-set-window-option -g window-status-current-attr bright
+#set-window-option -g window-status-current-fg "#268bd2"  # blue
+set-window-option -g window-status-current-fg "#b58900"  # yellow
+set-window-option -g window-status-current-bg "#073642"  # base02
+#set-window-option -g window-status-current-attr bright
 #
-set-window-option -g mode-fg white
-set-window-option -g mode-bg red
+#set-window-option -g mode-fg "#268bd2"  # blue
+set-window-option -g mode-fg "#b58900"  # yellow
+set-window-option -g mode-bg "#073642" # base02
 set-window-option -g mode-attr bright
 
 # pane colors
-set-option -g   pane-active-border-bg default
-set-option -g   pane-active-border-fg red
 set-option -g   pane-border-bg default
-set-option -g   pane-border-fg cyan
+#set-option -g   pane-border-fg "#073642" # base02
+set-option -g   pane-border-fg "#586e75"  # base01
+set-option -g   pane-active-border-bg default
+#set-option -g   pane-active-border-fg "#dc322f"  # red
+set-option -g   pane-active-border-fg "#b58900"  # yellow
 
 # misc items (popups, etc)
-set-option -g   message-bg red
-set-option -g   message-fg white
-set-option -g   display-panes-colour red
+set-option -g   message-bg "#073642"  # base02
+set-option -g   message-fg "#d33682"  # magenta
+set-option -g   display-panes-colour "#b58900"  # yellow
+set-option -g   display-panes-time 6000
 
 # Window options
 set-window-option -g utf8 on
