Adding key binding and option for pane listing.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -21,6 +21,7 @@ set-option -g   mouse-select-pane on
 set-option -g   mouse-select-window on
 set-option -g   mouse-resize-pane on
 set-option -g   repeat-time 500
+set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
 set-option -g   set-titles on
@@ -83,7 +84,6 @@ set-option -g   pane-active-border-fg "#b58900"  # yellow
 set-option -g   message-bg "#073642"  # base02
 set-option -g   message-fg "#d33682"  # magenta
 set-option -g   display-panes-colour "#b58900"  # yellow
-set-option -g   display-panes-time 6000
 
 # Window options
 set-window-option -g utf8 on
@@ -147,6 +147,7 @@ unbind-key |        ; bind-key |        split-window -h
 unbind-key -        ; bind-key -        split-window -v
 
 # Pane selection and resizing
+unbind-key P        ; bind-key P        display-panes
 unbind-key left     ; bind-key left     select-pane -L
 unbind-key up       ; bind-key up       select-pane -U
 unbind-key down     ; bind-key down     select-pane -D
