--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -20,7 +20,7 @@ set-option -g   history-limit 100000  # Use a BIG scrollback history buffer.
 set-option -g   mouse-select-pane on
 set-option -g   mouse-select-window on
 set-option -g   mouse-resize-pane on
-set-option -g   repeat-time 500
+set-option -g   repeat-time 500  # Allow multiple commands without pressing prefix-key.
 set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
