Adjust clock-mode color to soloarized and key binding.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -87,7 +87,7 @@ set-option -g   display-panes-colour "#b58900"  # yellow
 
 # Window options
 set-window-option -g utf8 on
-set-window-option -g clock-mode-colour blue
+set-window-option -g clock-mode-colour "#268bd2"  # blue
 set-window-option -g clock-mode-style 24
 set-window-option -g monitor-activity on
 set-window-option -g xterm-keys on
@@ -194,3 +194,6 @@ unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 unbind-key C-v       ; bind C-v         run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
 # Move tmux copy buffer into x clipboard.
 unbind-key C-c       ; bind C-y         run "tmux show-buffer | xclip -i"
+
+# Misc bits
+unbind-key C         ; bind-key C       clock-mode
