Changed list-key binding.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -172,8 +172,8 @@ unbind-key C-down   ; bind-key -r M-down    resize-pane -D 5
 unbind-key @        ; bind-key @        confirm-before kill-window
 # R = reload configuration file
 unbind-key R        ; bind-key R	source-file ~/.tmux.conf
-# q = list keys
-unbind-key q        ; bind-key q        list-keys
+# ? = list keys bindings
+unbind-key ?        ; bind-key ?        list-keys
 
 # Copy mode
 set-window-option -g mode-keys vi
