--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -24,6 +24,7 @@ set-option -g   repeat-time 500  # Allow multiple commands without pressing pref
 set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
+set-option -g	renumber-windows on  # Renumber the window numbers
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
 set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
