--- a/multi/geany/colorschemes/inkpot.conf
+++ b/multi/geany/colorschemes/inkpot.conf
@@ -1,5 +1,5 @@
 #
-# Copyright 2009 Felipe Mesquita <fmesquitacunha(at)gmail(dot)com>
+# Copyright 2012 Campbell Barton <ideasman42(at)gmail(dot)com>
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Library General Public
@@ -16,61 +16,59 @@
 # Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 #
-# Ported to Geany by Matthew Brush <matt(at)geany(dot)org>
-#
 
 [theme_info]
-name=GitHub
-description=Similar to GitHub.com's highlighting colors.
+name=InkPot
+description=Based on the vim theme of the same name.
 version=1.22.0
-author=Felipe Mesquita <fmesquitacunha(at)gmail(dot)com>
-url=https://github.com/mig/gedit-themes/blob/master/github.xml
+author=Campbell Barton <ideasman42(at)gmail(dot)com>
+url=https://github.com/codebrainz/geany-themes
 
 [named_styles]
 
-default=#000;#f8f8ff;false;false
-error=#f00;#bfbfbf;false;italic
+default=#cfbfad;#1e1e27;false;false
+error=#1e1e1e;#f00;false;false
 
 # Editor styles
 #-------------------------------------------------------------------------------
 
-selection=;#c0c0c0;false;true
-current_line=#000;#f0f0f0;true
-brace_good=default,bold
-brace_bad=default,italic
-margin_line_number=#7f7f7f;#ececec
-margin_folding=#7f7f7f;#d9d7d7
-fold_symbol_highlight=#ececec
-indent_guide=#c0c0c0;#fff;true;false
-caret=#000;#c0c0c0;false;false
-marker_line=#7f7f7f;#ececec
-marker_search=;#c0c0c0
-marker_mark=#7f7f7f;#ececec
+selection=;#4e4e8f;false;true
+current_line=#000;#2d2d32;true
+brace_good=#cfbfad;#4e4e8f
+brace_bad=#cfbfad;#ff00000
+margin_line_number=#8b8bcd;#2e2e2e
+margin_folding=#000;#3e3e3e;false;false
+fold_symbol_highlight=#6e6e6e
+indent_guide=#3b3b4d;;true;false
+caret=#8b8bff;#ffffff;false;false
+marker_line=#000;#ff0;false;false
+marker_search=#000;#b8f4b8;false;false
+marker_mark=#000;#b8f4b8;
 call_tips=default
-white_space=#c0c0c0;#fff;true;false
+white_space=indent_guide
 
 # Generic programming languages
 #-------------------------------------------------------------------------------
 
-comment=#998
-comment_doc=#998
+comment=#cd8b00
+comment_doc=#737dd5
 comment_line=comment
 comment_line_doc=comment_doc
-comment_doc_keyword=comment_doc,bold
-comment_doc_keyword_error=comment_doc,italic
+comment_doc_keyword=#4e5ab3;;true
+comment_doc_keyword_error=comment_doc
 
-number=#099
+number=#f0ad6d
 number_1=number
 number_2=number_1
 
-type=#458;;true
-class=type
-function=#900
+type=#ff8bff;;true
+class=#ff8bff
+function=#ff8bff
 parameter=function
 
-keyword=#0086b3;;true
+keyword=#808bed
 keyword_1=keyword
-keyword_2=#aa2c8c;;true
+keyword_2=#afc2ff;;true
 keyword_3=keyword_1
 keyword_4=keyword_1
 
@@ -80,23 +78,23 @@ identifier_2=identifier_1
 identifier_3=identifier_1
 identifier_4=identifier_1
 
-string=#d14
+string=#ffcd8b;#404040
 string_1=string
 string_2=string_1
 string_3=default
 string_4=default
-string_eol=string_1,italic
-character=string_1
+string_eol=string_1
+character=string
 backtick=string_2
 here_doc=string_2
 
 scalar=string_2
-label=default,bold
-preprocessor=#0f8787
+label=#e76000;;bold
+preprocessor=#409090
 regex=number_1
-operator=default
-decorator=string_1,bold
-other=default
+operator=#eee8d5
+decorator=#e76000;;true
+other=#808bed
 
 # Markup-type languages
 #-------------------------------------------------------------------------------
@@ -104,7 +102,7 @@ other=default
 tag=type
 tag_unknown=tag,bold
 tag_end=tag,bold
-attribute=keyword_1
+attribute=#ff8bff
 attribute_unknown=attribute,bold
 value=string_1
 entity=default
@@ -112,6 +110,6 @@ entity=default
 # Diff
 #-------------------------------------------------------------------------------
 
-line_added=#3de737
-line_removed=#e74837
+line_added=#00aa00
+line_removed=#ff0000
 line_changed=#e7b937
