--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -187,9 +187,9 @@ unbind-key R        ; bind-key R	source-file ~/.tmux.conf
 unbind-key M-p      ; bind-key M-p      source-file ~/.tmux/layout-prog.tmux
 # * = duplicate input to all panes in current window
 unbind-key *        ; bind-key *        set-window-option synchronize-panes
-unbind-key /        ; bind-key /        command-prompt -p 'alert (string):' "setw monitor-content '%%'"
-unbind-key 'C-''      ; bind-key 'C-''      command-prompt -p 'alert (silence):' "set-window-option monitor-silence '%%'"
-unbind-key 'C-"'      ; bind-key 'C-"'      set-window-option monitor-activity
+unbind-key /        ; bind-key /        command-prompt -p 'alert on string (str):' "setw monitor-content '%%'"
+unbind-key "'"      ; bind-key "'"      command-prompt -p 'alert on silence (secs):' "set-window-option monitor-silence '%%'"
+unbind-key '"'      ; bind-key '"'      set-window-option monitor-activity
 
 
 # Copy mode
