--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -143,6 +143,8 @@ unbind-key M-7      ; bind-key -n M-7   select-window -t 7
 unbind-key M-8      ; bind-key -n M-8   select-window -t 8
 unbind-key M-9      ; bind-key -n M-9   select-window -t 9
 unbind-key M-0      ; bind-key -n M-0   select-window -t 10
+unbind-key N        ; bind-key N        swap-window -t +1
+unbind-key P        ; bind-key P        swap-window -t -1
 
 # Window splitting
 unbind-key M--      ; bind-key -n M--   split-window -v
@@ -152,7 +154,7 @@ unbind-key |        ; bind-key |        split-window -h
 unbind-key -        ; bind-key -        split-window -v
 
 # Pane selection and resizing
-unbind-key P        ; bind-key P        display-panes
+unbind-key C-p      ; bind-key C-p      display-panes
 unbind-key left     ; bind-key left     select-pane -L
 unbind-key up       ; bind-key up       select-pane -U
 unbind-key down     ; bind-key down     select-pane -D
