Configuration reload now displays a 'pop-up' message.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -184,7 +184,7 @@ unbind-key @        ; bind-key @        confirm-before kill-window
 # ? = list keys bindings
 unbind-key ?        ; bind-key ?        list-keys
 # R = reload configuration file
-unbind-key R        ; bind-key R	source-file ~/.tmux.conf
+unbind-key R        ; bind-key R	       source-file ~/.tmux.conf \; display-message "Configuration reloaded."
 # R = reload configuration file
 unbind-key M-p      ; bind-key M-p      source-file ~/.tmux/layout-prog.tmux
 # * = duplicate input to all panes in current window
