--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -210,9 +210,9 @@ unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 
 # Depends on xclip (typically seperate package).
 # Move x clipboard into tmux paste buffer.
-unbind-key C-v       ; bind C-v         run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+unbind-key C-v       ; bind C-v         run "xclip -out | tmux load-buffer -; tmux paste-buffer"
 # Move tmux copy buffer into x clipboard.
-unbind-key C-c       ; bind C-y         run "tmux show-buffer | xclip -i"
+unbind-key C-y       ; bind C-y         run "tmux show-buffer | xclip -selection clipboard -in"
 
 # Misc bits
 unbind-key C         ; bind-key C       clock-mode
