Removed default-path and changed new-window to set path to previous window's path.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -33,7 +33,7 @@ set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
 set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
 set-option -g   base-index 1
-set-option -g   default-path ""
+#set-option -g   default-path ""
 
 # Screen lock
 bind-key C-x    lock-server
@@ -116,8 +116,7 @@ unbind-key M-e      ; bind-key -n M-e   choose-session
 # Window selection
 unbind-key Tab      ; bind-key Tab      choose-window
 unbind-key M-w      ; bind-key -n M-w   choose-window
-unbind-key M-t      ; bind-key -n M-t   new-window
-unbind-key t        ; bind-key t        new-window
+unbind-key c        ; bind-key c        new-window -c "#{pane_current_path}"
 unbind-key M-`      ; bind-key -n M-`   last-window
 unbind-key n        ; bind-key n        next-window
 unbind-key p        ; bind-key p        previous-window
