Set path to previous pane's path when splitting window.

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -146,11 +146,8 @@ unbind-key N        ; bind-key N        swap-window -t +1
 unbind-key P        ; bind-key P        swap-window -t -1
 
 # Window splitting
-unbind-key M--      ; bind-key -n M--   split-window -v
-unbind-key M-\      ; bind-key -n M-\   split-window -h
-unbind-key \        ; bind-key \        split-window -h
-unbind-key |        ; bind-key |        split-window -h
-unbind-key -        ; bind-key -        split-window -v
+unbind-key |        ; bind-key |        split-window -h -c "#{pane_current_path}"
+unbind-key -        ; bind-key -        split-window -v -c "#{pane_current_path}"
 
 # Pane selection and resizing
 unbind-key C-p      ; bind-key C-p      display-panes
