Set renumber-windows if tmux > 1.7

--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -28,7 +28,8 @@ set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are
 set-option -g   display-time 3000  # Milliseconds status line & other messages are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
-set-option -g	renumber-windows on  # Renumber the window numbers
+if-shell "[[ `tmux -V` > *1.7* ]]" \
+   'set-option -g	renumber-windows on'  # Renumber the window numbers
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
 set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
