--- a/linux-gnu/user/tmux.conf
+++ b/linux-gnu/user/tmux.conf
@@ -150,8 +150,12 @@ unbind-key N        ; bind-key N        swap-window -t +1
 unbind-key P        ; bind-key P        swap-window -t -1
 
 # Window splitting
-unbind-key |        ; bind-key |        split-window -h -c "#{pane_current_path}"
-unbind-key -        ; bind-key -        split-window -v -c "#{pane_current_path}"
+if-shell "[[ `tmux -V` == *1.9* ]]" \
+   'unbind-key |        ; bind-key |        split-window -h -c "#{pane_current_path}"' \
+   'unbind-key |        ; bind-key |        split-window -h'
+if-shell "[[ `tmux -V` == *1.9* ]]" \
+   'unbind-key -        ; bind-key -        split-window -v -c "#{pane_current_path}"' \
+   'unbind-key -        ; bind-key -        split-window -v' 
 
 # Pane selection and resizing
 unbind-key C-p      ; bind-key C-p      display-panes
