--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "linux-gnu/user/dot.tmux/plugins/tpm"]
 	path = linux-gnu/user/dot.tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+[submodule "linux-gnu/user/dot.tmux/plugins/tmux-resurrect"]
+	path = linux-gnu/user/dot.tmux/plugins/tmux-resurrect
+	url = https://github.com/tmux-plugins/tmux-resurrect
