--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -7,6 +7,10 @@
 # Set that stupid Esc-Wait off, so VI works again
 set-option -sg  escape-time 0
 
+# Disable UTF8 mouse mode, which causes extra characters to be inserted when using tmux in a ssh
+# session and XFCE Terminal...
+set-option -g mouse-utf8 off
+
 set-option -ga  update-environment 'DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY'
 
 # Set the prefix to Ctrl-a
