Add tmux resurrect plugin.

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -224,3 +224,8 @@ unbind-key C-y       ; bind C-y         run "tmux show-buffer | xclip -selection
 
 # Misc bits
 unbind-key C         ; bind-key C       clock-mode
+
+#### Includes
+
+# Tmux Resurrect - https://github.com/tmux-plugins/tmux-resurrect
+run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
