Fix syntax error with semicolon.

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -189,7 +189,7 @@ unbind-key M-right  ; bind-key -n M-right   select-pane -R
 unbind-key C-up     ; bind-key -r M-up      select-pane -U
 unbind-key C-down   ; bind-key -r M-down    select-pane -D
 unbind-key +        ; bind-key +          select-layout tiled
-unbind-key =        ; bind-key =          select-layout even-vertical ; select-layout even-horizontal
+unbind-key =        ; bind-key =          select-layout even-vertical \; select-layout even-horizontal
 unbind-key I        ; bind-key I          select-layout even-horizontal
 unbind-key L        ; bind-key L          select-layout even-vertical
 
