--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -215,7 +215,7 @@ set-option buffer-limit 10
 unbind-key M-NPage      ; bind-key -n M-NPage       copy-mode
 unbind-key M-PPage      ; bind-key -n M-PPage       copy-mode
 unbind-key M-i          ; bind-key -n M-i       paste-buffer
-unbind-key -t vi-copy M-{   ; bind-key -t vi-copy M-{   begin-selection
+unbind-key -t vi-copy M-{   ; bind-key -t vi-copy M-{   begin-selection \; display-message "Begin selection"
 unbind-key -t vi-copy M-}   ; bind-key -t vi-copy M-}   copy-selection
 unbind-key -t vi-copy Home  ; bind-key -t vi-copy Home  start-of-line
 unbind-key -t vi-copy End   ; bind-key -t vi-copy End   end-of-line
@@ -225,7 +225,7 @@ unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 # Move x clipboard into tmux paste buffer.
 unbind-key C-v       ; bind C-v         run "xclip -out | tmux load-buffer -; tmux paste-buffer"
 # Move tmux copy buffer into x clipboard.
-unbind-key C-y       ; bind C-y         run "tmux show-buffer | xclip -selection clipboard -in"
+unbind-key C-y       ; bind C-y         run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
 
 # Misc bits
 unbind-key C         ; bind-key C       clock-mode
