--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -33,13 +33,13 @@ set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are
 set-option -g   display-time 3000  # Milliseconds status line & other messages are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
-if-shell "[[ `tmux -V` > *1.7* ]]" \
+if-shell "[[ $(tmux -V) == *1.7 ]]" \
    'set-option -g	renumber-windows on'  # Renumber the window numbers
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
 set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
 set-option -g   base-index 1
-if-shell "[[ `tmux -V` < *1.9* ]]" \
+if-shell "[[ $(tmux -V) == *1.9 ]]" \
    'set-option -g   default-path ""'
 
 # Screen lock
@@ -233,4 +233,4 @@ unbind-key C         ; bind-key C       clock-mode
 #### Includes
 
 # Tmux Resurrect - https://github.com/tmux-plugins/tmux-resurrect
-run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
