--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -215,7 +215,7 @@ set-option buffer-limit 10
 unbind-key M-NPage      ; bind-key -n M-NPage       copy-mode
 unbind-key M-PPage      ; bind-key -n M-PPage       copy-mode
 unbind-key M-i          ; bind-key -n M-i       paste-buffer
-unbind-key -t vi-copy M-{   ; bind-key -t vi-copy M-{   begin-selection \; display-message "Begin selection"
+unbind-key -t vi-copy M-{   ; bind-key -t vi-copy M-{   begin-selection
 unbind-key -t vi-copy M-}   ; bind-key -t vi-copy M-}   copy-selection
 unbind-key -t vi-copy Home  ; bind-key -t vi-copy Home  start-of-line
 unbind-key -t vi-copy End   ; bind-key -t vi-copy End   end-of-line
