Lots of changes, cleanups, etc.

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -4,11 +4,21 @@
 # Based heavily on Ton Kersten's (http://tonkersten.com/2011/07/104-switching-to-tmux/)
 ################################################################################
 
-# Set that stupid Esc-Wait off, so VI works again
+# Couple of notes:
+#   * A single config file for multiple versions of tmux is tricky.  So long as
+#     tmux uses floats (no semantic version numbers), we can use bc to perform
+#     a full range of comparisons vs the string comparisons floating around the
+#     net.  Looks ugly but it works.
+
+
+################################################################################
+# Base Options
+
+# Set escape time to 0.
 set-option -sg  escape-time 0
 
-# Disable UTF8 mouse mode, which causes extra characters to be inserted when using tmux in a ssh
-# session and XFCE Terminal...
+# Disable UTF8 mouse mode, which causes extra characters to be inserted when
+# using tmux in a ssh session and XFCE Terminal...
 # http://superuser.com/questions/417027/why-are-random-letters-inserted-in-my-tmux-session
 set-option -g mouse-utf8 off
 
@@ -33,14 +43,14 @@ set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are
 set-option -g   display-time 3000  # Milliseconds status line & other messages are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
-if-shell "[[ $(tmux -V) == *1.7 ]]" \
-   'set-option -g	renumber-windows on'  # Renumber the window numbers
+# Renumber the window numbers
+if-shell '[[ $(bc <<< "$(tmux -V| cut -d" " -f3) >= 1.7") ]]' 'set-option -g renumber-windows on'  
+
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
 set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
 set-option -g   base-index 1
-if-shell "[[ $(tmux -V) == *1.9 ]]" \
-   'set-option -g   default-path ""'
+set-option -g   pane-base-index 1
 
 # Screen lock
 bind-key C-x    lock-server
@@ -104,7 +114,7 @@ set-window-option -g clock-mode-style 24
 set-window-option -g monitor-activity on
 set-window-option -g xterm-keys on
 set-window-option -g automatic-rename on
-set-window-option -g aggressive-resize off
+set-window-option -g aggressive-resize on    # constrain window size to the smallest client currently viewing it vs currently attached session.
 #
 set-window-option -g window-status-format ' #I-#W '
 set-window-option -g window-status-current-format ' #I-#W '
@@ -123,9 +133,8 @@ unbind-key M-e      ; bind-key -n M-e   choose-session
 # Window selection
 unbind-key Tab      ; bind-key Tab      choose-window
 unbind-key M-w      ; bind-key -n M-w   choose-window
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-   'unbind-key c        ; bind-key c        new-window -c "#{pane_current_path}"' \
-   'unbind-key c        ; bind-key c        new-window'
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) >= 1.9") ]]' \
+#	'unbind-key c ; bind-key c new-window -c "#{pane_current_path}"'
 unbind-key M-`      ; bind-key -n M-`   last-window
 unbind-key n        ; bind-key n        next-window
 unbind-key p        ; bind-key p        previous-window
@@ -155,43 +164,48 @@ unbind-key N        ; bind-key N        swap-window -t +1
 unbind-key P        ; bind-key P        swap-window -t -1
 
 # Window splitting
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-   'unbind-key |        ; bind-key |        split-window -h -c "#{pane_current_path}"' \
-   'unbind-key |        ; bind-key |        split-window -h'
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-   'unbind-key -        ; bind-key -        split-window -v -c "#{pane_current_path}"' \
-   'unbind-key -        ; bind-key -        split-window -v' 
+unbind-key | ; bind-key | split-window -h -c "#{pane_current_path}"
+unbind-key - ; bind-key - split-window -v -c "#{pane_current_path}"
+# FIX: #{pane_current_path} isn't getting eval'd
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) >= 1.9") ]]' \
+#	'unbind-key | ; bind-key | split-window -h -c "#{pane_current_path}"'
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) < 1.9") ]]' \
+#	'unbind-key | ; bind-key | split-window -h'
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) >= 1.9") ]]' \
+#	'unbind-key - ; bind-key - split-window -v -c "#{pane_current_path}"'
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) >= 1.9") ]]' \
+#	'unbind-key - ; bind-key - split-window -v'
 
 # Pane selection and resizing
-unbind-key C-p      ; bind-key C-p      display-panes
-unbind-key left     ; bind-key left     select-pane -L
-unbind-key up       ; bind-key up       select-pane -U
-unbind-key down     ; bind-key down     select-pane -D
-unbind-key right    ; bind-key right    select-pane -R
-unbind-key C-h      ; bind-key C-h      select-pane -L
-unbind-key C-k      ; bind-key C-k      select-pane -U
-unbind-key C-j      ; bind-key C-j      select-pane -D
-unbind-key C-l      ; bind-key C-l      select-pane -R
-unbind-key j        ; bind-key -r j     resize-pane -D 5
-unbind-key k        ; bind-key -r k     resize-pane -U 5
-unbind-key h        ; bind-key -r h     resize-pane -L 5
-unbind-key l        ; bind-key -r l     resize-pane -R 5
-unbind-key C-left   ; bind-key -r C-left    resize-pane -L 1
-unbind-key C-right  ; bind-key -r C-right   resize-pane -R 1
-unbind-key C-up     ; bind-key -r C-up      resize-pane -U 1
-unbind-key C-down   ; bind-key -r C-down    resize-pane -D 1
+unbind-key C-p        ; bind-key C-p            display-panes
+unbind-key left       ; bind-key left           select-pane -L
+unbind-key up         ; bind-key up             select-pane -U
+unbind-key down       ; bind-key down           select-pane -D
+unbind-key right      ; bind-key right          select-pane -R
+unbind-key C-h        ; bind-key C-h            select-pane -L
+unbind-key C-k        ; bind-key C-k            select-pane -U
+unbind-key C-j        ; bind-key C-j            select-pane -D
+unbind-key C-l        ; bind-key C-l            select-pane -R
+unbind-key j          ; bind-key -r j           resize-pane -D 5
+unbind-key k          ; bind-key -r k           resize-pane -U 5
+unbind-key h          ; bind-key -r h           resize-pane -L 5
+unbind-key l          ; bind-key -r l           resize-pane -R 5
+unbind-key C-left     ; bind-key -r C-left      resize-pane -L 1
+unbind-key C-right    ; bind-key -r C-right     resize-pane -R 1
+unbind-key C-up       ; bind-key -r C-up        resize-pane -U 1
+unbind-key C-down     ; bind-key -r C-down      resize-pane -D 1
 unbind-key C-S-left   ; bind-key -r C-S-left    resize-pane -L 5
 unbind-key C-S-right  ; bind-key -r C-S-right   resize-pane -R 5
 unbind-key C-S-up     ; bind-key -r C-S-up      resize-pane -U 5
 unbind-key C-S-down   ; bind-key -r C-S-down    resize-pane -D 5
-unbind-key M-left   ; bind-key -n M-left    select-pane -L
-unbind-key M-right  ; bind-key -n M-right   select-pane -R
-unbind-key C-up     ; bind-key -r M-up      select-pane -U
-unbind-key C-down   ; bind-key -r M-down    select-pane -D
-unbind-key +        ; bind-key +          select-layout tiled
-unbind-key =        ; bind-key =          select-layout even-vertical \; select-layout even-horizontal
-unbind-key I        ; bind-key I          select-layout even-horizontal
-unbind-key L        ; bind-key L          select-layout even-vertical
+unbind-key M-left     ; bind-key -n M-left      select-pane -L
+unbind-key M-right    ; bind-key -n M-right     select-pane -R
+unbind-key C-up       ; bind-key -r M-up        select-pane -U
+unbind-key C-down     ; bind-key -r M-down      select-pane -D
+unbind-key +          ; bind-key +              select-layout tiled
+unbind-key =          ; bind-key =              select-layout even-vertical \; select-layout even-horizontal
+unbind-key I          ; bind-key I              select-layout even-horizontal
+unbind-key L          ; bind-key L              select-layout even-vertical
 
 unbind-key @        ; bind-key @        confirm-before kill-window
 # ? = list keys bindings
@@ -212,20 +226,30 @@ set-window-option -g mode-keys vi
 set-window-option -g mode-mouse off
 #set-window-option -g mode-mouse on
 set-option buffer-limit 10
-unbind-key M-NPage      ; bind-key -n M-NPage       copy-mode
-unbind-key M-PPage      ; bind-key -n M-PPage       copy-mode
-unbind-key M-i          ; bind-key -n M-i       paste-buffer
-unbind-key -t vi-copy M-{   ; bind-key -t vi-copy M-{   begin-selection
-unbind-key -t vi-copy M-}   ; bind-key -t vi-copy M-}   copy-selection
+unbind-key -n M-NPage       ; bind-key -n M-NPage       copy-mode
+unbind-key -n M-PPage       ; bind-key -n M-PPage       copy-mode
+unbind-key Escape           ; bind-key Escape           copy-mode
+unbind-key M-i              ; bind-key -n M-i           paste-buffer
+unbind-key -t vi-copy v     ; bind-key -t vi-copy v     begin-selection
+unbind-key -t vi-copy y     ; bind-key -t vi-copy y     copy-selection
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) >= 1.8") ]]' \
+#	'unbind-key -t vi-copy y ; bind-key -t vi-copy y copy-pipe "xsel --input --primary --clipboard"'
+unbind-key C-y    ; bind C-y     run "tmux show-buffer | xsel --input --primary --clipboard" \; display-message "Copied tmux buffer to system clipboard"
+unbind-key C-c    ; bind C-c     run "tmux show-buffer | xsel --input --primary --clipboard" \; display-message "Copied tmux buffer to system clipboard"
+	
 unbind-key -t vi-copy Home  ; bind-key -t vi-copy Home  start-of-line
 unbind-key -t vi-copy End   ; bind-key -t vi-copy End   end-of-line
 unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 
+#if-shell "[[ $(tmux -V) >= *1.8* ]]" \
+#   'unbind-key -t vi-copy y ; bind-key -t vi-copy y copy-pipe "xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"'
+
 # Depends on xclip (typically seperate package).
 # Move x clipboard into tmux paste buffer.
-unbind-key C-v       ; bind C-v         run "xclip -out | tmux load-buffer -; tmux paste-buffer"
+unbind-key C-v    ; bind C-v     run "xclip -out | tmux load-buffer -; tmux paste-buffer"
 # Move tmux copy buffer into x clipboard.
-unbind-key C-y       ; bind C-y         run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
+unbind-key C-y    ; bind C-y     run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
+unbind-key C-c    ; bind C-c     run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
 
 # Misc bits
 unbind-key C         ; bind-key C       clock-mode
