--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -246,10 +246,10 @@ unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 
 # Depends on xclip (typically seperate package).
 # Move x clipboard into tmux paste buffer.
-unbind-key C-v    ; bind C-v     run "xclip -out | tmux load-buffer -; tmux paste-buffer"
+#unbind-key C-v    ; bind C-v     run "xclip -out | tmux load-buffer -; tmux paste-buffer"
 # Move tmux copy buffer into x clipboard.
-unbind-key C-y    ; bind C-y     run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
-unbind-key C-c    ; bind C-c     run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
+#unbind-key C-y    ; bind C-y     run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
+#unbind-key C-c    ; bind C-c     run "tmux show-buffer | xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"
 
 # Misc bits
 unbind-key C         ; bind-key C       clock-mode
