Add TPM and Tmux Resurrect.

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -254,7 +254,11 @@ unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
 # Misc bits
 unbind-key C         ; bind-key C       clock-mode
 
-#### Includes
+#### Plugins
+set -g @plugin 'tmux-plugins/tpm'
+# Tmux Resurrect
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-processes 'ssh'
 
-# Tmux Resurrect - https://github.com/tmux-plugins/tmux-resurrect
-#run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
