Add newer config features.

--- a/multi/geany/geany.conf
+++ b/multi/geany/geany.conf
@@ -123,6 +123,8 @@ custom_date_format=
 tab_close_switch_to_mru=false
 extract_filetype_regex=-\\*-\\s*([^\\s]+)\\s*-\\*-
 msgwin_orientation=1
+keep_edit_history_on_reload_125=false
+replace_and_find_by_default=true
 
 [build-menu]
 number_ft_menu_items=0
@@ -163,6 +165,8 @@ replace_search_backwards=false
 replace_close_dialog=true
 pref_search_hide_find_dialog=false
 pref_search_always_wrap=false
+find_regexp_multiline=false
+replace_regexp_multiline=false
 
 [plugins]
 load_plugins=true
