Reduce editor font size.

--- a/multi/geany/geany.conf
+++ b/multi/geany/geany.conf
@@ -52,7 +52,7 @@ beep_on_errors=true
 auto_focus=false
 sidebar_symbol_visible=true
 sidebar_openfiles_visible=true
-editor_font=Meslo LG L DZ 12
+editor_font=Meslo LG S DZ 8
 tagbar_font=Meslo LG S DZ 8
 msgwin_font=Meslo LG S DZ 8
 show_notebook_tabs=true
