--- a/multi/geany/geany.conf
+++ b/multi/geany/geany.conf
@@ -112,7 +112,7 @@ pref_template_datetime=%d.%m.%Y %H:%M:%S %Z
 context_action_cmd=
 sidebar_visible=true
 statusbar_visible=true
-msgwindow_visible=true
+msgwindow_visible=false
 fullscreen=false
 scribble_text=Type here what you want, use it as a notice/scratch board
 scribble_pos=57
@@ -171,7 +171,7 @@ replace_regexp_multiline=false
 [plugins]
 load_plugins=true
 custom_plugin_path=
-active_plugins=;
+active_plugins=/usr/lib/x86_64-linux-gnu/geany/spellcheck.so;
 
 [tools]
 term_cmd=terminal
