Added flow control options to prevent terminal freezes during lots of output.

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -46,6 +46,9 @@ set-option -g   visual-bell on
 # Renumber the window numbers
 if-shell '[[ $(bc <<< "$(tmux -V| cut -d" " -f3) >= 1.7") ]]' 'set-option -g renumber-windows on'  
 
+set-window-option -g    c0-change-trigger 10         # set flow control trigger to 10 control chars / 1 ms
+set-window-option -g    c0-change-interval 100       # set flow control limiter to 100 ms
+
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
 set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shift-Page{Up|Down}
