Update active plugins and last dir.

--- a/multi/geany/geany.conf
+++ b/multi/geany/geany.conf
@@ -173,7 +173,7 @@ replace_regexp_multiline=false
 [plugins]
 load_plugins=true
 custom_plugin_path=
-active_plugins=/usr/lib/x86_64-linux-gnu/geany/spellcheck.so;
+active_plugins=/usr/lib64/geany/markdown.so;/usr/lib64/geany/spellcheck.so;
 
 [tools]
 term_cmd=terminal
@@ -207,7 +207,7 @@ scrollback_lines=500
 shell=/bin/bash
 colour_fore=#FFFFFF
 colour_back=#000000
-last_dir=/home/cc270467
+last_dir=/home/cac21
 send_cmd_prefix=
 image=
 
