--- a/linux-gnu/user/dot.abcde.conf
+++ b/linux-gnu/user/dot.abcde.conf
@@ -34,7 +34,7 @@ CDPARANOIAOPTS="--never-skip=40"
 CDDISCID=cd-discid
                                
 # Give the base location here for the encoded music files.
-OUTPUTDIR="$HOME/tmp/ripped/cd"
+OUTPUTDIR="$HOME/tmp/ripped"
 
 # Decide here how you want the tracks labelled for a standard 'single-artist',
 # multi-track encode and also for a multi-track, 'various-artist' encode:
