--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -44,7 +44,8 @@ set-option -g   display-time 3000  # Milliseconds status line & other messages a
 set-option -g   visual-activity off
 set-option -g   visual-bell on
 # Renumber the window numbers
-if-shell '[[ $(bc <<< "$(tmux -V| cut -d" " -f3) >= 1.7") ]]' 'set-option -g renumber-windows on'  
+#if-shell '[[ $(bc <<< "$(tmux -V| cut -d" " -f3) >= 1.7") ]]' 'set-option -g renumber-windows on'  
+set-option -g renumber-windows on
 
 set-window-option -g    c0-change-trigger 10         # set flow control trigger to 10 control chars / 1 ms
 set-window-option -g    c0-change-interval 100       # set flow control limiter to 100 ms
