Update with 2.1 deprecations.

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -35,9 +35,10 @@ unbind-key %   # split-window -h
 set-option -g   bell-action any
 set-option -g   default-terminal screen-256color  # Adjust term to use 256 colors.
 set-option -g   history-limit 100000  # Use a BIG scrollback history buffer.
-set-option -g   mouse-select-pane on
-set-option -g   mouse-select-window on
-set-option -g   mouse-resize-pane on
+#set-option -g   mouse-select-pane on  # deprecated 2.1
+#set-option -g   mouse-select-window on  # deprecated 2.1
+#set-option -g   mouse-resize-pane on  # deprecated 2.1
+set-option -g   mouse on  # Enable mouse mode, 2.1
 set-option -g   repeat-time 500  # Allow multiple commands without pressing prefix-key.
 set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are shown.
 set-option -g   display-time 3000  # Milliseconds status line & other messages are shown.
@@ -47,8 +48,8 @@ set-option -g   visual-bell on
 #if-shell '[[ $(bc <<< "$(tmux -V| cut -d" " -f3) >= 1.7") ]]' 'set-option -g renumber-windows on'  
 set-option -g renumber-windows on
 
-set-window-option -g    c0-change-trigger 10         # set flow control trigger to 10 control chars / 1 ms
-set-window-option -g    c0-change-interval 100       # set flow control limiter to 100 ms
+#set-window-option -g    c0-change-trigger 10         # set flow control trigger to 10 control chars / 1 ms # deprecated 2.1
+#set-window-option -g    c0-change-interval 100       # set flow control limiter to 100 ms  #deprecated 2.1
 
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
@@ -57,12 +58,12 @@ set-option -g   base-index 1
 set-option -g   pane-base-index 1
 
 # Screen lock
-bind-key C-x    lock-server
-bind-key x      lock-server
-bind-key -n M-x lock-server
-set-option -g   lock-after-time 0
-set-option -g   lock-server on
-set-option -g   lock-command "vlock"
+#bind-key C-x    lock-server
+#bind-key x      lock-server
+#bind-key -n M-x lock-server
+#set-option -g   lock-after-time 0
+#set-option -g   lock-server on
+#set-option -g   lock-command "vlock"
 
 # statusbar
 set-option -g   status-utf8 on
@@ -227,7 +228,7 @@ unbind-key '"'      ; bind-key '"'      set-window-option monitor-activity
 
 # Copy mode
 set-window-option -g mode-keys vi
-set-window-option -g mode-mouse off
+#set-window-option -g mode-mouse off  # deprecated 2.1
 #set-window-option -g mode-mouse on
 set-option buffer-limit 10
 unbind-key -n M-NPage       ; bind-key -n M-NPage       copy-mode
