Updating tmux.conf for 2.2

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -20,7 +20,8 @@ set-option -sg  escape-time 0
 # Disable UTF8 mouse mode, which causes extra characters to be inserted when
 # using tmux in a ssh session and XFCE Terminal...
 # http://superuser.com/questions/417027/why-are-random-letters-inserted-in-my-tmux-session
-set-option -g mouse-utf8 off
+# Doesn't appear to be valid in 2.2
+#set-option -g mouse-utf8 off
 
 set-option -ga  update-environment 'DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY'
 
@@ -66,7 +67,8 @@ set-option -g   pane-base-index 1
 #set-option -g   lock-command "vlock"
 
 # statusbar
-set-option -g   status-utf8 on
+# Doesn't seem to be valid in 2.2
+#set-option -g   status-utf8 on
 set-option -g   status-interval 1
 set-option -g   status-justify left
 set-option -g   status-left-length 15
@@ -113,7 +115,8 @@ set-option -g   message-fg "#d33682"  # magenta
 set-option -g   display-panes-colour "#b58900"  # yellow
 
 # Window options
-set-window-option -g utf8 on
+# Doesn't seem to be valid in 2.2
+#set-window-option -g utf8 on
 set-window-option -g clock-mode-colour "#268bd2"  # blue
 set-window-option -g clock-mode-style 24
 set-window-option -g monitor-activity on
