--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -14,6 +14,8 @@
 ################################################################################
 # Base Options
 
+source "/usr/share/tmux/powerline.conf"
+
 # Set escape time to 0.
 set-option -sg  escape-time 0
 
@@ -69,11 +71,11 @@ set-option -g   pane-base-index 1
 # statusbar
 # Doesn't seem to be valid in 2.2
 #set-option -g   status-utf8 on
-set-option -g   status-interval 1
-set-option -g   status-justify left
-set-option -g   status-left-length 15
-set-option -g   status-left ' #h |'
-set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
+#set-option -g   status-interval 1
+#set-option -g   status-justify left
+#set-option -g   status-left-length 15
+#set-option -g   status-left ' #h |'
+#set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
 
 
 ################################################################################
