Adjust vi copy mode bindings due to tmux/tmux#592

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -240,16 +240,16 @@ unbind-key -n M-NPage       ; bind-key -n M-NPage       copy-mode
 unbind-key -n M-PPage       ; bind-key -n M-PPage       copy-mode
 unbind-key Escape           ; bind-key Escape           copy-mode
 unbind-key M-i              ; bind-key -n M-i           paste-buffer
-unbind-key -t vi-copy v     ; bind-key -t vi-copy v     begin-selection
-unbind-key -t vi-copy y     ; bind-key -t vi-copy y     copy-selection
+bind-key -T copy-mode-vi   'v'    send -X begin-selection
+bind-key -T copy-mode-vi   'y'    send -X copy-selection
 #if-shell '[[ $(bc <<< "$(tmux -V| cut -d' ' -f2) >= 1.8") ]]' \
 #	'unbind-key -t vi-copy y ; bind-key -t vi-copy y copy-pipe "xsel --input --primary --clipboard"'
 unbind-key C-y    ; bind C-y     run "tmux show-buffer | xsel --input --primary --clipboard" \; display-message "Copied tmux buffer to system clipboard"
 unbind-key C-c    ; bind C-c     run "tmux show-buffer | xsel --input --primary --clipboard" \; display-message "Copied tmux buffer to system clipboard"
-	
-unbind-key -t vi-copy Home  ; bind-key -t vi-copy Home  start-of-line
-unbind-key -t vi-copy End   ; bind-key -t vi-copy End   end-of-line
-unbind-key -t vi-copy b     ; bind-key -t vi-copy b     rectangle-toggle
+
+bind-key -T copy-mode-vi   Home   send -X start-of-line
+bind-key -T copy-mode-vi   End    send -X end-of-line
+bind-key -T copy-mode-vi   b      send -X rectangle-toggle
 
 #if-shell "[[ $(tmux -V) >= *1.8* ]]" \
 #   'unbind-key -t vi-copy y ; bind-key -t vi-copy y copy-pipe "xclip -selection clipboard -in" \; display-message "Copied tmux buffer to system clipboard"'
