Update abcde config

--- a/linux-gnu/user/dot.abcde.conf
+++ b/linux-gnu/user/dot.abcde.conf
@@ -57,4 +57,7 @@ mungefilename ()
 MAXPROCS=2                              # Run a few encoders simultaneously
 PADTRACKS=y                             # Makes tracks 01 02 not 1 2
 EXTRAVERBOSE=n                          # Useful for debugging
-EJECTCD=y                               # Please eject cd when finished :-)
+EJECTCD=n                               # Please eject cd when finished :-)
+
+ACTIONS=cddb,playlist,read,encode,tag,replaygain,move,clean
+METAFLAC=metaflac
