--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -88,32 +88,31 @@ set-option -g   status-bg "#002b36"  # base03
 set-option -g   status-keys emacs
 
 # default window title colors
-set-window-option -g window-status-fg "#839496"  # base0
-set-window-option -g window-status-bg "#002b36"  # base03
+set-window-option -g window-status-style fg="#839496"  # base0
+set-window-option -g window-status-style bg="#002b36"  # base03
 #set-window-option -g window-status-attr dim
 
 # active window title colors
 #set-window-option -g window-status-current-fg "#268bd2"  # blue
-set-window-option -g window-status-current-fg "#b58900"  # yellow
-set-window-option -g window-status-current-bg "#073642"  # base02
+set-window-option -g window-status-current-style fg="#b58900"  # yellow
+set-window-option -g window-status-current-style bg="#073642"  # base02
 #set-window-option -g window-status-current-attr bright
-#
 #set-window-option -g mode-fg "#268bd2"  # blue
-set-window-option -g mode-fg "#b58900"  # yellow
-set-window-option -g mode-bg "#073642" # base02
-set-window-option -g mode-attr bright
+set-window-option -g mode-style fg="#b58900"  # yellow
+set-window-option -g mode-style bg="#073642" # base02
+set-window-option -g mode-style bright
 
 # pane colors
-set-option -g   pane-border-bg default
+set-option -g   pane-border-style bg=default
 #set-option -g   pane-border-fg "#073642" # base02
-set-option -g   pane-border-fg "#586e75"  # base01
-set-option -g   pane-active-border-bg default
+set-option -g   pane-border-style fg="#586e75"  # base01
+set-option -g   pane-active-border-style bg=default
 #set-option -g   pane-active-border-fg "#dc322f"  # red
-set-option -g   pane-active-border-fg "#b58900"  # yellow
+set-option -g   pane-active-border-style fg="#b58900"  # yellow
 
 # misc items (popups, etc)
-set-option -g   message-bg "#073642"  # base02
-set-option -g   message-fg "#d33682"  # magenta
+set-option -g   message-style bg="#073642"  # base02
+set-option -g   message-style fg="#d33682"  # magenta
 set-option -g   display-panes-colour "#b58900"  # yellow
 
 # Window options
