--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -14,7 +14,8 @@
 ################################################################################
 # Base Options
 
-source "/usr/share/tmux/powerline.conf"
+if-shell '[ -r /usr/share/tmux/powerline.conf ]' \
+  'source "/usr/share/tmux/powerline.conf"'
 
 # Set escape time to 0.
 set-option -sg  escape-time 0
