Update tmux powerline config

--- a/linux-gnu/user/dot.tmux.conf
+++ b/linux-gnu/user/dot.tmux.conf
@@ -14,9 +14,6 @@
 ################################################################################
 # Base Options
 
-if-shell '[ -r /usr/share/tmux/powerline.conf ]' \
-  'source "/usr/share/tmux/powerline.conf"'
-
 # Set escape time to 0.
 set-option -sg  escape-time 0
 
@@ -86,7 +83,7 @@ set-option -g   pane-base-index 1
 set-option -g   status-fg "#586e75"  # base01
 set-option -g   status-bg "#002b36"  # base03
 #set-option -g   status-attr bright
-set-option -g   status-keys emacs
+#set-option -g   status-keys emacs
 
 # default window title colors
 set-window-option -g window-status-style fg="#839496"  # base0
@@ -96,8 +93,8 @@ set-window-option -g window-status-style bg="#002b36"  # base03
 # active window title colors
 #set-window-option -g window-status-current-fg "#268bd2"  # blue
 set-window-option -g window-status-current-style fg="#b58900"  # yellow
-set-window-option -g window-status-current-style bg="#073642"  # base02
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style bg="#93a1a1"  # base01
+set-window-option -g window-status-current-style bright
 #set-window-option -g mode-fg "#268bd2"  # blue
 set-window-option -g mode-style fg="#b58900"  # yellow
 set-window-option -g mode-style bg="#073642" # base02
@@ -269,6 +266,10 @@ set -g @plugin 'tmux-plugins/tpm'
 # Tmux Resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-processes 'ssh'
+
+# Source powerline
+if-shell '[ -r /usr/share/tmux/powerline.conf ]' \
+  'source "/usr/share/tmux/powerline.conf"'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
