Always show username and hostname

--- a/linux-gnu/user/starship.toml
+++ b/linux-gnu/user/starship.toml
@@ -2,6 +2,12 @@
 truncation_length = 0
 truncate_to_repo = false
 
+[username]
+show_always = true
+
+[hostname]
+ssh_only = false
+
 [aws]
 symbol = " "
 
