--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 ---
 
+# Reusable chunks of code
+.bootstrap_pipenv_dev: &bootstrap_pipenv_dev |
+  pip install pipenv
+  pipenv sync --dev  # sync is preferred over install --ignore-pipfile
+
 .alpine_install_standard_packages: &alpine_install_standard_packages |
   apk update
   apk add \
@@ -8,74 +13,46 @@
     curl \
     findutils \
     git \
-    grep
+    grep \
+    make
 
 stages:
-  - checks
   - lint
-  - test
 
-################################################################################
-# Checks
-check_nonascii_filenames:
-  stage: checks
-  image: alpine:3.7
-  script:
-    - *alpine_install_standard_packages
-    - bin/check_for_nonascii_filenames.sh
-
-check_whitespace_errors:
-  stage: checks
-  image: alpine:3.7
-  script:
-    - *alpine_install_standard_packages
-    - bin/check_for_whitespace_errors.sh
-
-################################################################################
-# Lint
-lint_yaml:
+# Check for whitespace failures.
+check_for_whitespace_errors:
   stage: lint
-  image: alpine:3.7
+  image: artifactory.cloud.cas.org/docker-hub/alpine:3.11
+  tags:
+    - docker
   script:
     - *alpine_install_standard_packages
-    - apk add python
-    - curl https://bootstrap.pypa.io/get-pip.py | python
-    - pip install yamllint
-    - bin/lint_yaml.sh
+    - make lint-whitespace
 
-lint_markdown:
+yamllint:
   stage: lint
-  image: ruby:2.3-alpine
+  image: artifactory.cloud.cas.org/docker-hub/python:3.8.2
+  tags:
+    - docker
   script:
-    - *alpine_install_standard_packages
-    - gem install mdl
-    - bin/lint_markdown.sh
+    - *bootstrap_pipenv_dev
+    - make lint-yaml
 
-ansible_lint:
+ansible-lint:
   stage: lint
-  image: alpine:3.7
+  image: artifactory.cloud.cas.org/docker-hub/python:3.8.2
+  tags:
+    - docker
   script:
-    - *alpine_install_standard_packages
-    - apk add ansible
-    - curl https://bootstrap.pypa.io/get-pip.py | python
-    - pip install ansible-lint
-    - bin/lint_ansible.sh
+    - *bootstrap_pipenv_dev
+    - make lint-ansible
 
 shellcheck:
-  stage: test
-  image: alpine:3.7
+  stage: lint
+  image: artifactory.cloud.cas.org/docker-hub/alpine:3.11
+  tags:
+    - docker
   script:
     - *alpine_install_standard_packages
-    - curl -sL https://storage.googleapis.com/shellcheck/shellcheck-latest.linux.x86_64.tar.xz | tar -xvJ -C ~/
-    - mv ~/shellcheck-latest/shellcheck /usr/bin/
-    - bin/run_shellcheck.sh
-
-################################################################################
-# Tests
-rubocop:
-  stage: test
-  image: ruby:2.3-alpine
-  script:
-    - *alpine_install_standard_packages
-    - gem install rubocop
-    - bin/run_rubocop.sh
+    - curl -sL https://storage.googleapis.com/shellcheck/shellcheck-v0.7.1.linux-x86_64 -o /usr/bin/shellcheck
+    - make lint-shellcheck
