Add starship role

--- a/.ansible/bootstrap.yml
+++ b/.ansible/bootstrap.yml
@@ -3,7 +3,15 @@
 - hosts: "{{ host }}"
 
   roles:
-    - bootstrap-common
+
+    - role: bootstrap-common
+      tags:
+        - common
+
     - role: lsd
       tags:
         - lsd
+
+    - role: starship
+      tags:
+        - starship
