--- a/linux-gnu/dot.tmux.conf
+++ b/linux-gnu/dot.tmux.conf
@@ -83,11 +83,10 @@ set-option -g   pane-base-index 1
 set-option -g   status-fg "#586e75"  # base01
 set-option -g   status-bg "#002b36"  # base03
 #set-option -g   status-attr bright
-#set-option -g   status-keys emacs
 
 # default window title colors
 set-window-option -g window-status-style fg="#839496"  # base0
-set-window-option -g window-status-style bg="#002b36"  # base03
+set-window-option -g window-status-style bg="#073642"  # base02
 #set-window-option -g window-status-attr dim
 
 # active window title colors
