--- a/linux-gnu/dot.tmux.conf
+++ b/linux-gnu/dot.tmux.conf
@@ -17,12 +17,6 @@
 # Set escape time to 0.
 set-option -sg  escape-time 0
 
-# Disable UTF8 mouse mode, which causes extra characters to be inserted when
-# using tmux in a ssh session and XFCE Terminal...
-# http://superuser.com/questions/417027/why-are-random-letters-inserted-in-my-tmux-session
-# Doesn't appear to be valid in 2.2
-#set-option -g mouse-utf8 off
-
 set-option -ga  update-environment 'DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY'
 
 # Set the prefix to Ctrl-a
@@ -36,21 +30,13 @@ unbind-key %   # split-window -h
 set-option -g   bell-action any
 set-option -g   default-terminal screen-256color  # Adjust term to use 256 colors.
 set-option -g   history-limit 100000  # Use a BIG scrollback history buffer.
-#set-option -g   mouse-select-pane on  # deprecated 2.1
-#set-option -g   mouse-select-window on  # deprecated 2.1
-#set-option -g   mouse-resize-pane on  # deprecated 2.1
 set-option -g   mouse on  # Enable mouse mode, 2.1
 set-option -g   repeat-time 500  # Allow multiple commands without pressing prefix-key.
 set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are shown.
 set-option -g   display-time 3000  # Milliseconds status line & other messages are shown.
 set-option -g   visual-activity off
 set-option -g   visual-bell on
-# Renumber the window numbers
-#if-shell '[[ $(bc <<< "$(tmux -V| cut -d" " -f3) >= 1.7") ]]' 'set-option -g renumber-windows on'
 set-option -g renumber-windows on
-
-#set-window-option -g    c0-change-trigger 10         # set flow control trigger to 10 control chars / 1 ms # deprecated 2.1
-#set-window-option -g    c0-change-interval 100       # set flow control limiter to 100 ms  #deprecated 2.1
 
 set-option -g   set-titles on
 set-option -g   set-titles-string ' #I-#W '
@@ -58,54 +44,47 @@ set-option -g   terminal-overrides 'xterm*:smcup@:rmcup@'  # Fix issue with Shif
 set-option -g   base-index 1
 set-option -g   pane-base-index 1
 
-# Screen lock
-#bind-key C-x    lock-server
-#bind-key x      lock-server
-#bind-key -n M-x lock-server
-#set-option -g   lock-after-time 0
-#set-option -g   lock-server on
-#set-option -g   lock-command "vlock"
-
-# statusbar
-# Doesn't seem to be valid in 2.2
-#set-option -g   status-utf8 on
-#set-option -g   status-interval 1
-#set-option -g   status-justify left
-#set-option -g   status-left-length 15
-#set-option -g   status-left ' #h |'
-#set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
-
 
 ################################################################################
 # COLORS
 
+# https://ethanschoonover.com/solarized/
+
+# base03:  #002b36
+# base02:  #073642
+# base01:  #586e75
+# base00:  #657b83
+# base0:   #839496
+# base1:   #93a1a1
+# base2:   #eee8d5
+# base3:   #fdf6e3
+# yellow:  #b58900
+# orange:  #cb4b16
+# red:     #dc322f
+# magenta: #d33682
+# violet:  #6c71c4
+# blue:    #268bd2
+# cyan:    #2aa198
+# green:   #859900
+
 # default statusbar colors
-set-option -g   status-fg "#586e75"  # base01
-set-option -g   status-bg "#002b36"  # base03
-#set-option -g   status-attr bright
+set-option -ag   status-style "bg=#002b36"  # base03
+set-option -ag   status-style "fg=#586e75"  # base01
 
 # default window title colors
-set-window-option -g window-status-style fg="#839496"  # base0
-set-window-option -g window-status-style bg="#073642"  # base02
-#set-window-option -g window-status-attr dim
+set-option -ag   window-status-style "bg=#002b36"  # base03
+set-option -ag   window-status-style "fg=#586e75"  # base01
 
 # active window title colors
-#set-window-option -g window-status-current-fg "#268bd2"  # blue
-set-window-option -g window-status-current-style fg="#b58900"  # yellow
-set-window-option -g window-status-current-style bg="#93a1a1"  # base01
-set-window-option -g window-status-current-style bright
-#set-window-option -g mode-fg "#268bd2"  # blue
-set-window-option -g mode-style fg="#b58900"  # yellow
-set-window-option -g mode-style bg="#073642" # base02
-set-window-option -g mode-style bright
+set-window-option -ag window-status-current-style bg="#073642"  # base02
+#set-window-option -ag window-status-current-style fg="#586375"  # base01
+set-window-option -ag window-status-current-style fg="#b58900"  # yellow
 
 # pane colors
-set-option -g   pane-border-style bg=default
-#set-option -g   pane-border-fg "#073642" # base02
-set-option -g   pane-border-style fg="#586e75"  # base01
-set-option -g   pane-active-border-style bg=default
-#set-option -g   pane-active-border-fg "#dc322f"  # red
-set-option -g   pane-active-border-style fg="#b58900"  # yellow
+set-option -ag   pane-border-style bg=default
+set-option -ag   pane-border-style fg="#586e75"  # base01
+set-option -ag   pane-active-border-style bg=default
+set-option -ag   pane-active-border-style fg="#b58900"  # yellow
 
 # misc items (popups, etc)
 set-option -g   message-style bg="#073642"  # base02
@@ -113,17 +92,15 @@ set-option -g   message-style fg="#d33682"  # magenta
 set-option -g   display-panes-colour "#b58900"  # yellow
 
 # Window options
-# Doesn't seem to be valid in 2.2
-#set-window-option -g utf8 on
 set-window-option -g clock-mode-colour "#268bd2"  # blue
 set-window-option -g clock-mode-style 24
 set-window-option -g monitor-activity on
 set-window-option -g xterm-keys on
 set-window-option -g automatic-rename on
 set-window-option -g aggressive-resize on    # constrain window size to the smallest client currently viewing it vs currently attached session.
-#
 set-window-option -g window-status-format ' #I-#W '
 set-window-option -g window-status-current-format ' #I-#W '
+
 
 ################################################################################
 # KEY BINDINGS
@@ -261,14 +238,14 @@ bind-key -T copy-mode-vi   b      send -X rectangle-toggle
 unbind-key C         ; bind-key C       clock-mode
 
 #### Plugins
-set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tpm'
 # Tmux Resurrect
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-processes 'ssh'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @resurrect-processes 'ssh'
 
 # Source powerline
 if-shell '[ -r /usr/share/tmux/powerline.conf ]' \
   'source "/usr/share/tmux/powerline.conf"'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
