--- a/linux-gnu/dot.tmux.conf
+++ b/linux-gnu/dot.tmux.conf
@@ -27,15 +27,16 @@ bind-key C-a    send-prefix
 unbind-key %   # split-window -h
 
 # All kind of nice options
-set-option -g   bell-action any
-set-option -g   default-terminal screen-256color  # Adjust term to use 256 colors.
-set-option -g   history-limit 100000  # Use a BIG scrollback history buffer.
-set-option -g   mouse on  # Enable mouse mode, 2.1
-set-option -g   repeat-time 500  # Allow multiple commands without pressing prefix-key.
-set-option -g   display-panes-time 6000  # Milliseconds display-pane numbers are shown.
-set-option -g   display-time 3000  # Milliseconds status line & other messages are shown.
-set-option -g   visual-activity off
-set-option -g   visual-bell on
+set-option -g bell-action any
+#set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-option -g default-terminal screen-256color  # Adjust term to use 256 colors.
+set-option -g history-limit 100000  # Use a BIG scrollback history buffer.
+set-option -g mouse on  # Enable mouse mode, 2.1
+set-option -g repeat-time 500  # Allow multiple commands without pressing prefix-key.
+set-option -g display-panes-time 6000  # Milliseconds display-pane numbers are shown.
+set-option -g display-time 3000  # Milliseconds status line & other messages are shown.
+set-option -g visual-activity off
+set-option -g visual-bell on
 set-option -g renumber-windows on
 
 set-option -g   set-titles on
