--- a/linux-gnu/starship.toml
+++ b/linux-gnu/starship.toml
@@ -14,9 +14,8 @@ show_always = true
 ssh_only = false
 
 [character]
-symbol = "❯"
+success_symbol = "❯"
 error_symbol = "✖"
-use_symbol_for_status = true
 
 [aws]
 symbol = "  "
